--- a/css/components/sobre.css
+++ b/css/components/sobre.css
@@ -210,7 +210,7 @@
   font-size: 0.38em;
   letter-spacing: 0.18em;
   text-transform: uppercase;
-  color: rgba(255, 255, 255, 0.35);
+  color: rgba(255, 255, 255, 0.55);
   vertical-align: middle;
   margin-left: 2px;
 }
